fix: icon was visible in desktop mode
fix #28

--- a/src/components/Tabber/index.scss
+++ b/src/components/Tabber/index.scss
@@ -144,7 +144,7 @@ $borderHeight: 0.3rem;
       }
     }
 
-    img {
+    svg {
       display: none;
     }
   }
